fix(test): replace Java 9+ List.of/Map.of with Java 8-compatible factories
The unit test relied on List.of and Map.of factories introduced in Java 9,
which made mvn deploy fail on the JDK 8 toolchain enforced by feature/1.0.x.
Use Collections.singletonList, Arrays.asList and HashMap so the test compiles
and runs under Java 8.